# MTDServer

./: .gitignore  README.md  graph.py  pyproject.toml  setup.sh
.github/workflows/: latex.yml  latexErrors.yml  tests.yml
doc/: bibliografia.bib  proyecto.tex
doc/portada/: portada.tex
doc/prefacios/: prefacio.tex
doc/secciones/: 01_introduccion.tex  03_estado_del_arte.tex  04_planificacion.tex  06_implementacion.tex  07_conclusiones.tex  08_glosario.tex
html/: index.html
mass/: __init__.py  config.py  container_controller.py  decorators.py  main.py  mtd_controller.py  port_controller.py
mass/httpd/: Dockerfile
mass/nginx/: Dockerfile  nginx.conf
tests/: .coveragerc
tests/common/: helpers.py
tests/features/: container_controller.feature  mtd_controller.feature  port_controller.feature
tests/features/steps/: container_controller_steps.py  mtd_controller_steps.py  port_controller_steps.py
