[tool.poetry]
name = "mass"
version = "0.1.0"
description = ""
authors = ["Marcos Romero Martín"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.1.3"
pydbus = "^0.6.0"
pygobject = "^3.48.2"
pyroute2-nftables = "^0.6.13"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.0"
behave = "^1.2.6"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mass = "mass.main:main"

[tool.poe.tasks]
images = ["nginx"," httpd"]
nginx = "docker build -f mass/nginx/Dockerfile -t nginx ."
httpd = "docker build -f mass/httpd/Dockerfile -t httpd ."
check = "python -m compileall mass/"
